#summary ChangeLog for releases.

= DDT Change Log =

== DDT 0.7.1 (devel) ==
 * Fixed [http://code.google.com/a/eclipselabs.org/p/ddt/issues/detail?id=68 issue@ELabs #68]: Missing enum members in the outline view.
 * Fixed bug with implementation of issue #3 : support Debian Linux DMD layout.

== DDT 0.7.0 (2013-08-15) ==
 * Requirements changes: now requires minimum Java VM version 1.7 .
 * Implemented issue #2: Support parsing of latest D syntax (up to D language version 2.063).
   * Completely rewrote D parser, creating a new hand-written parser (IDE no longer depends on descent.compiler).
 * Holding Ctrl and clicking over a reference now always opens a new editor on where the reference target is.
 * Fixed NPE bug when opening D search page with a package reference selected in the editor.
 * Fixed minor parser AFE bug with qualified reference at end of file.
 * Fixed minor bug when resolving modules without module declarations (implicit module name).
 * -- released Preview Release 0.7.0 --
 * Added mixin template instance to listed model elements in UI (for example, outline)
 * Fixed bug in D Appearance preference page: var and funtions showing up as Structs in preview.
 * Fixed a bug with selective imports presenting all module symbols, not just the selected ones.
 * Code completion icons now consistent with the rest of the IDE UI:
  * (previously some decorators for storage classes or protection attributes were missing, and JDT like icons where not supported in Code Completion popup)
 * -v2 switch is no longer included in default GDC build response file.
 * Implemented issue #3 : support Debian Linux DMD layout
 * Fixed code completion NPE bug with function declaration with missing syntax.
 * Fixed code completion NPE bug with conditional declarations/statements with missing bodies.
 * Fixed bug with the display text of function and template parameters in code completion popup.  

== DDT 0.6.0 (2012-05-17) ==