@@ -5,6 +5,8 @@
 == DDT 0.7.1 (devel) ==
  * Fixed [http://code.google.com/a/eclipselabs.org/p/ddt/issues/detail?id=68 issue@ELabs #68]: Missing enum members in the outline view.
  * Fixed bug with implementation of issue #3 : support Debian Linux DMD layout.
+ * DDoc view: The text of undefined macros now remains unmodified, instead of being replaced by empty text.
+   * Example: {{{My $(NO_SUCH_MACRO undefined) macro}}} will render as {{{My $(NO_SUCH_MACRO undefined) macro}}} instead of {{{My  macro}}}
 
 == DDT 0.7.0 (2013-08-15) ==
  * Requirements changes: now requires minimum Java VM version 1.7 .
